* preventing auto-zoom on mobile

--- a/src/public/styles/shared-style.css
+++ b/src/public/styles/shared-style.css
@@ -31,6 +31,12 @@ textarea.form-control {
     border: none;
 }
 
+/* prevents auto-zoom on mobile when inputting */
+.text-default-size {
+    font-size: 1em;
+}
+
+
 .search-area {
     width: 100%;
     display: flex;
